--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="mypost">
         <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">영화URL</label>
+            <label for="floatingInput">영화URL !!!</label>
         </div>
 
         <div class="input-group mb-3">
