--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         }
 
         .mycards {
-            width: 1200px;
+            width: 95%;
+            max-width: 1200px;
             margin: 20px auto 20px auto;
         }
 
