--- a/featureTest.html
+++ b/featureTest.html
@@ -3,8 +3,9 @@
 
 <head>
 	feature test2
-	feature test3 - origin
-	feature test4 - origin
+	feature test3 
+	feature test4
+	feature test5 
 </head>
 
 <body>
